c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/incompatible_union_types/return_type_mismatch.c
union u {
    int x;
};

union u return_union(void){
    // define an identical but distinct union type
    union u {
        int x;
    };

    union u result = {10};

    // return it; invalid b/c it's the wrong "union u" type
    return result;
}
